--- a/may1.html
+++ b/may1.html
@@ -12,7 +12,7 @@
         <div class="text-center">
         <h1>approximations</h1>
         </div>
-        <p>A fatal exception 0x1337 has occurred at gvenna.github.io/approximations/may1.html. The current website will be terminated.</p>
+        <p>A fatal exception 0x1337 has occurred at approximations/may1.html. The current website will be terminated.</p>
         <ul>
         <li><p>Well, April is over. I had fun learning to code this website, and though there is more I want to do (make a start menu, clickable windows, consistent styling, a working media player), I'm fine with what I got done. April is over, and I hope my audience of none has enjoyed this little compilation of poems. <3 </p></li>
         </ul>
