--- a/index.html
+++ b/index.html
@@ -268,16 +268,30 @@
         </div>
         <div class="window-body">
             <p>Select to restore</p>
+            <a href="https://youtu.be/ZJoZw1STwFA?si=toqohSnAmIjlYG1Q">
+                <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
+                <p>track01.cda</p>
+            </a>
 
             <a href="https://youtu.be/EN9auBn6Jys?si=WYLiDe4wmok_IxyI">
                 <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
-                <p>track01.cda</p>
+                <p>track02.cda</p>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=7DypKkvstgI">
+                <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
+                <p>track03.cda</p>
             </a>
           
             <a href="https://youtu.be/loB0kmz_0MM?si=hsSQL0A1uuVkml4f">
                 <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
-                <p>track02.cda</p>
-            </a>    
+                <p>track04.cda</p>
+            </a>  
+            
+            <a href="https://www.youtube.com/watch?v=DkYPge6ZKSQ">
+                <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
+                <p>track05.cda</p>
+            </a>  
         </div>
     </div>
     <!-- Recycle Bin Popup Window -->
