--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <p>track02.cda</p>
             </a>
 
-            <a href="https://www.youtube.com/watch?v=7DypKkvstgI">
+            <a href="https://gvenna.github.io/approximations/">
                 <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
                 <p>track03.cda</p>
             </a>
