--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <p>05_01</p>
     </a>
 
-    <!-- Recycle Bin Popup Window (Uses 98.css) -->
+    <!-- Recycle Bin Popup Window
     <a href="#" id="open-popup-3">
         <img src="https://win98icons.alexmeub.com/icons/png/recycle_bin_full_cool-0.png" alt="Recycle Bin Icon">
         <p>Recycle Bin</p>
@@ -294,7 +294,7 @@
             </a>  
         </div>
     </div>
-    <!-- Recycle Bin Popup Window -->
+    Recycle Bin Popup Window -->
 
 </div>
 
