--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
         <p>or</p>
     </a>
 
-    <a href="https://poets.org/poem/enkindled-spring">
-        <img src="https://win98icons.alexmeub.com/icons/png/address_book_card.png" alt="Address Card Icon">
-        <p>05_21</p>
-    </a>
-
     <!-- Help Book Popup Window (Uses 98.css) -->
      <a href="#" id="open-popup-1">
         <img src="https://win98icons.alexmeub.com/icons/png/help_book_cool-4.png" alt="Help Book">
@@ -295,6 +290,16 @@
         </div>
     </div>
     Recycle Bin Popup Window -->
+
+    <a href="https://poets.org/poem/enkindled-spring">
+        <img src="https://win98icons.alexmeub.com/icons/png/address_book_card.png" alt="Address Card Icon">
+        <p>05_21</p>
+    </a>
+   
+    <a href="https://www.poetryfoundation.org/poems/91496/i-have-a-time-machine">
+        <img src="https://win98icons.alexmeub.com/icons/png/application_hourglass_small-4.png" alt="Application Hourglass Icon">
+        <p>05_22</p>
+    </a>
 
 </div>
 
