--- a/index.html
+++ b/index.html
@@ -301,6 +301,11 @@
         <p>05_22</p>
     </a>
 
+    <a href="may31.html">
+        <img src="https://win98icons.alexmeub.com/icons/png/address_book-0.png" alt="Address Book Icon">
+        <p>05_31</p>
+    </a>
+
 </div>
 
 <div class="start-bar">
