--- a/may31.html
+++ b/may31.html
@@ -5,10 +5,14 @@
   </head>
   
   <body>
+
   <div class="image-with-text">
-  <h3> May 31 </h3>
-    <img src="../poem_images/lib_congress.JPEG" alt="Library of Congress" class="responsive-img">
+  <h3> May 31st Poem: </h3>
+    <img src="..poem_images/lib_congress.JPEG" alt="Library of Congress" class="responsive-img">
+    <p class="image-caption">Source: Oliver, Mary. "Morning at Great Pond." </p>
+
   </div>
+
   </body>
   
 </html>
