--- a/may31.html
+++ b/may31.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <title>May 31</title>
-    <link rel="stylesheet" href="../directory_style.css">
+    <link rel="stylesheet" href="directory_style.css">
   </head>
   
   <body>
 
   <div class="image-with-text">
   <h3> May 31st Poem: </h3>
-    <img src="../poem_images/lib_congress.JPEG" alt="Library of Congress" class="responsive-img">
+    <img src="poem_images/lib_congress.JPEG" alt="Library of Congress" class="responsive-img">
     <p class="image-caption">Source: Oliver, Mary. "Morning at Great Pond." </p>
 
   </div>
