--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </a>
 
     <a href="https://www.poetryfoundation.org/poems/91496/i-have-a-time-machine" >
-        <img src="https://win98icons.alexmeub.com/icons/png/game_mine_1-0.png" alt="Game Mine Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/application_hourglass_small-4.png" alt="Hour Glass Icon">
         <p>04_12</p>
     </a>
 
@@ -168,7 +168,7 @@
 
     <a href="april_html_files/april17_ii.html"> 
         <img src="https://win98icons.alexmeub.com/icons/png/entire_network_globe-0.png" alt="Entire Network Globe icon">
-        <p>04_17</p>
+        <p>04_17_ii</p>
     </a>
 
     <a href="april_html_files/april18.html" >
