--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </a>
 
     <a href="https://www.poetryfoundation.org/poems/91496/i-have-a-time-machine" >
-        <img src="https://win98icons.alexmeub.com/icons/png/application_hourglass_small-4.png" alt="Hour Glass Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/calendar-0.png" alt="Calendar Icon">
         <p>04_12</p>
     </a>
 
@@ -291,11 +291,12 @@
     </div>
     Recycle Bin Popup Window -->
    
-
+    <!--
     <a href="may31.html">
         <img src="https://win98icons.alexmeub.com/icons/png/address_book-0.png" alt="Address Book Icon">
         <p>05_31</p>
     </a>
+    -->
 
 </div>
 
