--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </a>
 
     <a href="https://www.poetryfoundation.org/poems/91496/i-have-a-time-machine" >
-        <img src="https://win98icons.alexmeub.com/icons/png/calendar-0.png" alt="Calendar Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/game_mine_2-0.png" alt="Game Mine Icon">
         <p>04_12</p>
     </a>
 
@@ -227,7 +227,7 @@
     </a>
     
     <a href="april_html_files/april29.html">
-        <img src="https://win98icons.alexmeub.com/icons/png/wia_img_color-1.png" alt="Wia Img Color Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/regedit_file-0.png" alt="Reg Edit File Icon">
         <p>04_29</p>
     </a>    
 
