--- a/april_html_files/april29.html
+++ b/april_html_files/april29.html
@@ -7,12 +7,9 @@
 
     <body>
         <div class="image-with-text">
-            <h3> April 29th poems: </h3>
-            <h2> I</h2>
+            <h3> April 29th poem: </h3>
             <img src="../poem_images/ocean_poem_p1.jpg" alt="Ocean Poem 1" class="responsive-img">
             <img src="../poem_images/ocean_poem_p2.jpg" alt="Ocean Poem 2" class="responsive-img">
-            <h2> II</h2>
-            <img src="../poem_images/maja_haderlap_poem2.jpg" alt="Ocean Poem 1" class="responsive-img">
             <p class="image-caption">Source: Maja Haderlap. Distant Transit. Translated by Tess Lewis, Archipelago, 22 Mar. 2022.</p>
             </div>
             </body>
