--- a/april_html_files/april23.html
+++ b/april_html_files/april23.html
@@ -8,6 +8,8 @@
         
     <div class="image-with-text">
         <h3> April 23rd Poem: </h3>
-        <img src="../poem_images/mymoses.jpg" alt="My Moses Poem" class="responsive-img">
-        <p class="image-caption">Source: Videlock, Wendy. Poetry. Poetry Foundation, July/August. 2008. </p>
+        <img src="../poem_images/deferred_1.PNG" alt="Deferred Poem Page 1" class="responsive-img">
+        <img src="../poem_images/deferred_2.PNG" alt="Deferred Poem Page 2" class="responsive-img">
+        <img src="../poem_images/deferred_3.PNG" alt="Deferred Poem Page 3" class="responsive-img">
+        <p class="image-caption">Source: Hughes, Langston. Selected Poems of Langston Hughes. Knopf Doubleday Publishing Group, 25 Oct. 2011. </p>
 </html>
