Icon change for 04_23

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </a>
 
     <a href="april_html_files/april23.html">
-        <img src="https://win98icons.alexmeub.com/icons/png/image_old_gif-0.png" alt="Old Gif Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/calendar-1.png" alt="Calendar Icon">
         <p>04_23</p>
     </a>
 
