--- a/april_html_files/april4.html
+++ b/april_html_files/april4.html
@@ -8,17 +8,16 @@
     
   <div class="image-with-text">
   <h3> April 4th Poem: </h3>
-    <img src="../poem_images/egypt_poem.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
+    <img src="../poem_images/egypt_poem.JPEG" alt="Ancient Egyptian Poem" class="responsive-img">
 
 
-  <h3> Poem Context Section 1:</h3>
+  <h3> Poem Context:</h3>
   <img src="../poem_images/egypt_context_1.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
 
-   <h3> Poem Context Section 2:</h3> 
-  <img src="../poem_images/egypt_context_2.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
-
   <p class="image-caption">Source: Lawall, Sarah N, and Maynard Mack. The Norton Anthology of World Literature. Second Edition ed., vol. A, New York, W. W. Norton & Company, 29 July 2003.</p>
-  <p class="image-caption"> Misc: <a href="https://betawiki.net/wiki/Windows_98">Memphis</a> </p>
+  <p class="image-caption"> Misc: <a href="https://betawiki.net/wiki/Windows_98">Memphis</a>
+    <br> When I read this, I thought of <a href="https://www.youtube.com/watch?v=fEfzKOhUCj4">this</a> Mitski song. Though I believe the speaker of the poem is bolder. They don't wait for the listener.
+  </p>
 
 
   </div>
