--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
         <p>04_11</p>
     </a>
 
-    <a href="https://www.poetryfoundation.org/poems/91496/i-have-a-time-machine" >
+    <a href="https://www.poetryfoundation.org/poems/1636746/notes-on-devotion" >
         <img src="https://win98icons.alexmeub.com/icons/png/game_mine_2-0.png" alt="Game Mine Icon">
         <p>04_12</p>
     </a>
 
-    <a href="https://poets.org/poem/enkindled-spring" >
+    <a href="https://poets.org/poem/rebuke-spell" >
         <img src="https://win98icons.alexmeub.com/icons/png/game_spider-0.png" alt="Spider Icon">
         <p>04_13</p>
     </a>   
